Bug 198374 - OpenVPN configuration panels don't remember settings
Summary: OpenVPN configuration panels don't remember settings
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: Plasma Widget (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Will Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-30 00:46 UTC by Diederik van der Boor
Modified: 2009-08-03 13:15 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Diederik van der Boor 2009-06-30 00:46:46 UTC
Version:            (using 4.2.90 (KDE 4.2.90 (KDE 4.3 Beta2)) "release 138", KDE:KDE4:Factory:Desktop / openSUSE_11.1)
Compiler:          gcc
OS:                Linux (i686) release 2.6.30-48-pae

I'm unable to use the network manager applet to establish an OpenVPN connection.

I'm currently authenticating with X509 certificates. When I open the configuration again the following things go wrong:
- the wrong input fields are displayed.
- when switching back and forth, the 'Key' field appears empty.

Secondly, when unchecking the "Use Cypher" / "Use TLS Auth" fields I can't select the file at all.
Comment 1 Cypher 2009-07-09 16:59:28 UTC
I second that, I cannot connect either. Wrong fields for X.509 certificates, and fields are not saved.

This is a major issue as we need OpenVPN is our business.

Version:

K Desktop Environment
Version 4.2.96 (KDE 4.2.96 (KDE 4.3 RC2)) "release 140"
Comment 2 Gerardo Contreras 2009-08-02 18:53:13 UTC
Same over here.
Using Kubuntu with 4.2.98.

In fact, I've never been able to connect to openvpn using the network manager in KDE.
Comment 3 Will Stephenson 2009-08-02 23:49:51 UTC
SVN commit 1006042 by wstephens:

Read/write all OpenVPN settings I could find, not just the ones needed
for my local VPN.

Please test!  If there is a problem, please attach or mail me privately
the config file found in
~/.kde4/share/apps/networkmanagement/connections corresponding to your
openvpn connection.

BUG:198374


 M  +12 -3     openvpn/nm-openvpn-service.h  
 M  +3 -1      openvpn/openvpn.cpp  
 M  +201 -84   openvpn/openvpnprop.ui  
 M  +170 -35   openvpn/openvpnwidget.cpp  
 M  +7 -0      openvpn/openvpnwidget.h  
 M  +242 -194  vpnc/vpncprop.ui  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1006042
Comment 4 Gerardo Contreras 2009-08-03 00:25:19 UTC
Will this get to 4.3?
Comment 5 Jithin Emmanuel 2009-08-03 12:45:18 UTC
Does this take care of vpnc configuration also ?
Comment 6 Will Stephenson 2009-08-03 13:15:38 UTC
No, this bug is about openvpnc connections only.  See https://bugs.kde.org/show_bug.cgi?id=188489 for vpnc.