Read/write all OpenVPN settings I could find, not just the ones needed for my local VPN.

Please test!  If there is a problem, please attach or mail me privately
the config file found in
~/.kde4/share/apps/networkmanagement/connections corresponding to your
openvpn connection.

BUG:198374